--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: "{Attila Ol&aacute;h}'s weblog"
     <blockquote>
       <span class="date"></span> posted on: <tt>{{ post.date | date_to_string }}</tt>;
       <span class="tags"></span> tags: {% for tag in post.tags %}<tt>{{ tag }}</tt>{% if forloop.last %};{% else %}, {% endif %}{% endfor %}
-      <fb:like href="{{ post.url }}" layout="button_count" show_faces="false" width="80" font="lucida grande"></fb:like>
+      <fb:like href="http://aatiis.me{{ post.url }}" layout="button_count" show_faces="false" width="80" font="lucida grande"></fb:like>
     </blockquote>
     <blockquote class="summary">{{ post.summary }}</blockquote>
   </div>
