changed example page title

--- a/downloads/javascript/jt-test.html
+++ b/downloads/javascript/jt-test.html
@@ -2,7 +2,7 @@
 <html xmlns:jt="http://www.example.com/jt">
   <head>
     <meta charset="utf-8" />
-    <title>HTML Script Insertion Test</title>
+    <title>JavaScript TAL Test</title>
     <script src="jt-src.js"></script>
   </head>
   <body>
