fixed demo page title

--- a/demos/cmap/buildings/buildings.html
+++ b/demos/cmap/buildings/buildings.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset=utf-8>
-    <title>CMAP: Building</title>
+    <title>Canvas 3D map</title>
     <script src=js/jquery.js></script>
     <script src=js/coffee-script.js></script>
     <script type=text/coffeescript>
