--- a/demos/pure-css-progress-bar.html
+++ b/demos/pure-css-progress-bar.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Yet Another Pure CSS Progress Bar</title>
+    <title>Pure CSS progress bar</title>
     <meta name="HandheldFriendly" content="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <style type="text/css">
